feat: proect until uas

--- a/P5/app/src/main/res/values/strings.xml
+++ b/P5/app/src/main/res/values/strings.xml
@@ -7,4 +7,11 @@
         <item>22</item>
         <item>23</item>
     </string-array>
+
+    <string-array name="val_barang">
+        <item>Sendal</item>
+        <item>Sepatu</item>
+        <item>Kaos Kaki</item>
+        <item>Tali Sepatu</item>
+    </string-array>
 </resources>
